# Voice-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
data/knowledge/: appointments.md  order_tracking.md  returns.md
src/voice_agent_app/: knowledge.py  main.py  models.py  monitoring.py  orchestrator.py  telephony.py
static/: app.css  app.js
templates/: index.html
tests/: test_app.py
