[project]
name = "callpilot-voice-ops"
version = "0.1.0"
description = "Standalone production-style voice support console with webhook, routing, escalation, and operations UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "python-multipart>=0.0.20,<0.1.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.12.0,<0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_agent_app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

